--- a/doc/AB类地区和985、211院校目录.md
+++ b/doc/AB类地区和985、211院校目录.md
@@ -1,12 +1,49 @@
-# A类地区
 
-['北京', '天津', '河北', '山西', '辽宁', '吉林', '黑龙江', '上海', '江苏', '浙江', '安徽', '福建', '江西',
-'山东', '河南', '湖北', '湖南', '广东', '重庆', '四川', '陕西']
+# AB类地区和985、211院校目录
+
+
+## AB类地区
+A、B区：https://yzc.hsi.com.cn/kyzx/jybzc/202009/20200904/1972918872.html
+
+
+# A类地区
+```text
+['北京', '天津', '河北', '山西', 
+'辽宁', '吉林', '黑龙江', '上海',
+ '江苏', '浙江', '安徽', '福建',
+  '江西','山东', '河南', '湖北',
+   '湖南', '广东', '重庆', '四川',
+    '陕西']
+
+```
 
 # B类地区
+```text
+['内蒙古', '广西', '海南', '贵州',
+ '云南', '西藏', '甘肃', '青海', 
+ '宁夏', '新疆']
+```
 
-['内蒙古', '广西', '海南', '贵州', '云南', '西藏', '甘肃', '青海', '宁夏', '新疆']
+## 985和211院校
 
+### 权威名单
+- 211工程名单：http://www.moe.gov.cn/srcsite/A22/s7065/200512/t20051223_82762.html
+- 985工程名单：http://www.moe.gov.cn/srcsite/A22/s7065/200612/t20061206_128833.html
+
+### 整理数据
+其中有一些学校名字和参考资料上有些差别做了些如下改动：
+
+    改动：
+        国防科学技术大学 --> 国防科技大学
+        中国石油大学 --> 中国石油大学(北京),中国石油大学(华东)
+        第二军医大学 --> 海军军医大学
+        中国地质大学 --> 中国地质大学(武汉),中国地质大学(北京)
+        第四军医大学 --> 空军军医大学
+        华北电力大学---> 华北电力大学,华北电力大学(保定)
+
+    211 院校供计 115 所
+    985 院校共计 39 所
+    即使如此可能仍然有错误，所以请慎重
 # 211计划院校
 
 ```text
@@ -41,7 +78,3 @@
            '中山大学', '华南理工大学', '四川大学', '电子科技大学', '重庆大学', '西安交通大学', '西北工业大学',
            '西北农林科技大学', '兰州大学']
 ```
-
-211工程名单：http://www.moe.gov.cn/srcsite/A22/s7065/200512/t20051223_82762.html
-985工程名单：http://www.moe.gov.cn/srcsite/A22/s7065/200612/t20061206_128833.html
-
