--- a/docs/AB类地区和985、211院校目录.md
+++ b/docs/AB类地区和985、211院校目录.md
@@ -78,3 +78,8 @@ A、B区：https://yzc.hsi.com.cn/kyzx/jybzc/202009/20200904/1972918872.html
            '中山大学', '华南理工大学', '四川大学', '电子科技大学', '重庆大学', '西安交通大学', '西北工业大学',
            '西北农林科技大学', '兰州大学']
 ```
+
+### 数据库查询
+![](../img/count双一流.png)
+![](../img/count985.png)
+![](../img/count211.png)
