--- a/docs/AB类地区和985、211院校目录.md
+++ b/docs/AB类地区和985、211院校目录.md
@@ -80,6 +80,6 @@ A、B区：https://yzc.hsi.com.cn/kyzx/jybzc/202009/20200904/1972918872.html
 ```
 
 ### 数据库查询
-![](../img/count双一流.png)
-![](../img/count985.png)
-![](../img/count211.png)
+![](img/count双一流.png)
+![](img/count985.png)
+![](img/count211.png)
