--- a/docs/AB类地区和985、211院校目录.md
+++ b/docs/AB类地区和985、211院校目录.md
@@ -2,11 +2,11 @@
 # AB类地区和985、211院校目录
 
 ## 权威参考资料
-- A、B区：https://yzc.hsi.com.cn/kyzx/jybzc/202009/20200904/1972918872.html
+- A、B区：http://www.moe.gov.cn/jyb_xwfb/gzdt_gzdt/s5987/202203/W020220311583072811871.pdf
 - 211工程名单：http://www.moe.gov.cn/srcsite/A22/s7065/200512/t20051223_82762.html
 - 985工程名单：http://www.moe.gov.cn/srcsite/A22/s7065/200612/t20061206_128833.html
 - 双一流名单：http://www.moe.gov.cn/s78/A22/A22_ztzl/ztzl_tjsylpt/sylpt_jsgx/201712/t20171206_320667.html
-    > 数据库数据来源：https://yz.chsi.com.cn/sch/search.do?ylgx=1
+    > 数据库院校数据来源：https://yz.chsi.com.cn/sch/search.do?ylgx=1
 
 ## 地区
 ### A类地区
