--- a/docs/调试与开发.md
+++ b/docs/调试与开发.md
@@ -45,8 +45,8 @@ pyinstaller -F -w -i img/ico.ico main.py
 
 打包之后请手动将img和db两个文件夹复制到打包文件位置
 
-![img.png](img/img.png)
-![img_1.png](img_1.png)
+![img.png](img/复制.png)
+![img_1.png](img/目录.png)
 
 ## 附加
 ### 安装virtualenv
