--- a/docs/AB类地区和985、211院校目录.md
+++ b/docs/AB类地区和985、211院校目录.md
@@ -1,6 +1,13 @@
 
 # AB类地区和985、211院校目录
 
+### 速达目录
+[A类地区](#A类地区)
+[B类地区](#B类地区)
+[211计划院校](#211计划院校)
+[双一流院校](#双一流院校)
+[985计划院校](#985计划院校)
+
 ## 权威参考资料
 - A、B区：http://www.moe.gov.cn/jyb_xwfb/gzdt_gzdt/s5987/202203/W020220311583072811871.pdf
 - 211工程名单：http://www.moe.gov.cn/srcsite/A22/s7065/200512/t20051223_82762.html
@@ -102,9 +109,3 @@
 |中国科学技术大学|厦门大学|山东大学|中国海洋大学|武汉大学|华中科技大学|湖南大学|
 |中南大学|中山大学|华南理工大学|四川大学|重庆大学|电子科技大学|西安交通大学|
 |西北工业大学|西北农林科技大学|兰州大学|国防科技大学|
-
-
-## 数据库查询数量校验
-![](img/count双一流.png)
-![](img/count985.png)
-![](img/count211.png)
