--- a/docs/调试与开发.md
+++ b/docs/调试与开发.md
@@ -7,7 +7,7 @@
 1. 克隆项目到本地（手动下载也可）
 
 ```
-git clone https://github.com/xx025/YanX.git
+git clone --depth=1 https://github.com/xx025/YanX.git
 ```
 ![](img/2022-09-05_20-09-08-克隆.png)
 2. 进入项目目录
@@ -33,11 +33,12 @@ pip install -r requirements.txt
 ![](img/2022-09-05_20-12-36-依赖.png)
 6. 运行
 ```
-main.py
+python main.py
 ```
 ![](img/2022-09-05_20-17-00-运行.png)
 7. 打包
 ```
+pip install virtualenv
 pyinstaller -F -w -i img/ico.ico main.py
 ```
 需提前安装pyinstaller，[安装pyinstaller](#安装pyinstaller)
