--- a/docs/调试与开发.md
+++ b/docs/调试与开发.md
@@ -1,60 +1,78 @@
 # 调试与开发
 
->ps：项目代码水平比较糟糕，整体更像一个缝合怪，可能并没有太大的参考价值，
+- >ps：项目代码水平比较糟糕，整体更像一个缝合怪，可能并没有太大的参考价值，
+
+- ### [视频参考](https://www.bilibili.com/video/BV1Ce4y1Z7Nq)
 
 ## 本地调试与运行
 
 1. 克隆项目到本地（手动下载也可）
 
-```
-git clone --depth=1 https://github.com/xx025/YanX.git
-```
-![](img/2022-09-05_20-09-08-克隆.png)
+    ```
+    git clone --depth=1 https://github.com/xx025/YanX.git
+    ```
+    ![](img/2022-09-05_20-09-08-克隆.png)
+
 2. 进入项目目录
-```text
-cd YanX
-```
-![](img/2022-09-05_20-10-57-目录.png)
+    ```text
+        cd YanX
+    ```
+    ![](img/2022-09-05_20-10-57-目录.png)
+
 3. 创建虚拟环境
-```text
-virtualenv venv
-```
-需提前安装virtualenv，[安装virtualenv](#安装virtualenv)
-![](img/2022-09-05_20-11-33-创建.png)
+
+    ```text
+    virtualenv venv
+    ```
+    需提前安装virtualenv，[安装virtualenv](#安装virtualenv)
+    ![](img/2022-09-05_20-11-33-创建.png)
+
 4. 激活虚拟环境(尽量使用cmd控制命令台，powershell可能有权限问题)
-```
-venv\Scripts\activate.bat
-```
-![](img/2022-09-05_20-12-10-激活.png)
+
+    ```
+    venv\Scripts\activate.bat
+    ```
+    ![](img/2022-09-05_20-12-10-激活.png)
+
+
 5. 安装依赖库
-```
-pip install -r requirements.txt
-```
-![](img/2022-09-05_20-12-36-依赖.png)
+
+    ```
+    pip install -r requirements.txt
+    ```
+    ![](img/2022-09-05_20-12-36-依赖.png)
+
 6. 运行
-```
-python main.py
-```
-![](img/2022-09-05_20-17-00-运行.png)
+
+    ```
+    python main.py
+    ```
+    ![](img/2022-09-05_20-17-00-运行.png)
+
 7. 打包
-```
-pip install virtualenv
-pyinstaller -F -w -i img/ico.ico main.py
-```
-需提前安装pyinstaller，[安装pyinstaller](#安装pyinstaller)
-![](img/2022-09-05_20-19-14-打包.png)
 
-打包之后请手动将img和db两个文件夹复制到打包文件位置
+    ```
+    pip install virtualenv
+    pyinstaller -F -w -i img/ico.ico main.py
+    ```
+    需提前安装pyinstaller，[安装pyinstaller](#安装pyinstaller)
+    ![](img/2022-09-05_20-19-14-打包.png)
 
-![img.png](img/复制.png)
-![img_1.png](img/目录.png)
+    打包之后请手动将img和db两个文件夹复制到打包文件位置
+
+    ![img.png](img/复制.png)
+    ![img_1.png](img/目录.png)
 
 ## 附加
+
 ### 安装virtualenv
-```
-pip install virtualenv
-```
+
+    ```
+    pip install virtualenv
+    ```
+
 ### 安装 pyinstaller
-```
-pip install pyinstaller
-```
+
+    ```
+    pip install pyinstaller
+    ```
