--- a/docs/调试与开发.md
+++ b/docs/调试与开发.md
@@ -63,6 +63,93 @@
     ![img.png](img/复制.png)
     ![img_1.png](img/目录.png)
 
+## 自解压
+
+参考资料：[自解压命令: shortcut WinRAR](https://documentation.help/WinRAR-zh/HELPSFXShortcut.htm)
+
+如果用Pyinstaller打包成一个可执行文件，那么运行这个文件会有一个解压资源的过程，导致程序启动非常慢;但如果不打包成一个文件似乎又显得十分丑陋；
+
+好在可用使用压缩软件（Win RAR）创建自解压文件，外表上看，自解压文件仍然是一个可执行文件，他甚至可用引导用户选择自己的安装目录等奇妙的功能；
+
+通过自解压，让这个demo显得更“正式”一点，更类似于一个成熟的带安装器的软件。
+
+### 1. -D 参数打包
+
+   ```
+   pyinstaller -D -w -i img/ico.ico main.py
+   ```
+   依然将另外两个文件夹放入打包文件目录，
+
+   看起来会是这样的：
+   ![](img/2022-09-06_21-05-34-自解压-复制.png)
+
+### 2. 通过RAR 压缩成一个压缩包
+
+#### 1. 在此之前，先改变文件夹名字；
+   pyinstaller 默认生成的文件夹为dist\main
+   我将main文件夹名字改为 YanX，在后面自解压后YanX\就是软件的目录
+   
+   ![](img/2022-09-06_21-14-25-自解压-改名.png)
+   
+#### 2. 压缩文件
+   
+   ![](img/2022-09-06_21-16-15-自解压-压缩.png)
+   ![](img/2022-09-06_21-17-54-自解压-压缩完成.png)
+   
+#### 3. 创建自解压文件
+   
+   首先再用RAR打开压缩包，选择自解压格式
+   ![](img/2022-09-06_21-21-46-自解压-打开.png)
+      
+   选择第一个 Default.SFX
+   ![](img/2022-09-06_21-25-31-自解压-默认模板.png)
+
+#### 4. 自解压高级先选
+      
+1. 常规
+
+   解压路径输入：`%APPDATA% `,选择绝对路径。这是一个环境变量，代表路径 `C:\Users\用户名\AppData\Roaming\`这个路径，
+
+   也可以选其他的，需要注意的是有些路径涉及权限问题，其他路径参考：[环境变量](https://baike.baidu.com/item/%E7%8E%AF%E5%A2%83%E5%8F%98%E9%87%8F)
+
+   ![](img/2022-09-06_21-28-50-自解压-常规.png)
+
+2. 模式
+   1. 全部显示：运行自解压文件，会显示对话框，用户可用选择解压路径（建议）
+   2. 隐藏启动对话框：运行自解压文件，解压到指定目录，但用户不能操作
+   3. 全部隐藏：运行自解压文件后台解压，用户无感知
+   ![](img/2022-09-06_21-42-19-自解压-模式.png)
+
+3. 高级
+   点击添加快捷方式，添加一个快捷方式到桌面
+   ![](img/2022-09-06_21-46-28-自解压-快捷方式.png)
+   
+   自解压文件解压后的文件夹，是`YanX\`,源文件名则是`YanX\main.exe`,快捷方式图标位于复制的静态文件文件夹`YanX\img\`下
+   
+   这两个路径你也可以填绝对路径，但是用户选择解压路径后，就绝对路径没那么好用了
+   ![](img/2022-09-06_21-49-24-自解压-快捷方式-路径.png)
+4. 更新
+
+   用户大致不会想知道你，解压的细节，所以就不用询问，做覆盖替换就好了
+   ![](img/2022-09-06_21-55-16-自解压-更新.png)
+
+5. 确定
+   最后选择确定就好了
+   ![](img/2022-09-06_21-49-24-自解压-确定.png)
+   
+   然后就能看到，与压缩文件同目录的自解压格式文件了
+   
+   ![](img/2022-09-06_21-59-47-自解压-完成.png)
+
+   
+
+
+      
+   
+      
+   
+
+
 ## 附加
 
 ### 安装virtualenv
