--- a/docs/调试与开发.md
+++ b/docs/调试与开发.md
@@ -3,6 +3,10 @@
 - >ps：项目代码水平比较糟糕，整体更像一个缝合怪，可能并没有太大的参考价值，
 
 - ### [视频参考](https://www.bilibili.com/video/BV1Ce4y1Z7Nq)
+### 速达目录
+
+[本地调试与运行](#本地调试与运行)
+[自解压](#自解压)
 
 ## 本地调试与运行
 
