--- a/docs/调试与开发.md
+++ b/docs/调试与开发.md
@@ -57,7 +57,7 @@
 
     ```
     pip install virtualenv
-    pyinstaller -F -w -i img/ico.ico main.py
+    pyinstaller -F -w -i favicon.ico main.py
     ```
     需提前安装pyinstaller，[安装pyinstaller](#安装pyinstaller)
     ![](img/2022-09-05_20-19-14-打包.png)
@@ -80,12 +80,8 @@
 ### 1. -D 参数打包
 
    ```
-   pyinstaller -D -w -i img/ico.ico main.py
+   pyinstaller -D -w -i favicon.ico main.py --add-data "favicon.ico;.\\"  --add-data ".\\db\\*;.\\db"
    ```
-   依然将另外两个文件夹放入打包文件目录，
-
-   看起来会是这样的：
-   ![](img/2022-09-06_21-05-34-自解压-复制.png)
 
 ### 2. 通过RAR 压缩成一个压缩包
 
