--- a/docs/调试与开发.md
+++ b/docs/调试与开发.md
@@ -68,13 +68,24 @@
     ![img_1.png](img/目录.png)
 
 
-## 安装包
+## 安装包制作
+如果用Pyinstaller打包成一个可执行文件，那么运行这个文件会有一个解压资源的过程，导致程序启动非常慢;但如果不打包成一个文件似乎又显得十分丑陋；
+
+
+好在可用使用各种打包软件，之前尝试了压缩软件RAR或2345zip自解压（两者都有报毒问题，遂放弃），最后找到了Inno Setup,很好用！
 
 
 Inno Setup 教程：https://www.bilibili.com/video/BV15k4y1R7cL
 
 需要注意的是，尽量不去选择C:\Program Files (x86) 这个作为安装目录，因为有权限问题
 
+
+打包：
+（自动将资源复制到目录中了）
+```shell
+pyinstaller -D -w -i favicon.ico main.py --add-data "favicon.ico;.\\"  --add-data ".\\db\\*;.\\db
+```
+ 
 
 查找替换以下字段，安装到AppData目录
 ```text
@@ -91,10 +102,6 @@ DisableDirPage=yes
 [//]: # (参考资料：[自解压命令: shortcut WinRAR]&#40;https://documentation.help/WinRAR-zh/HELPSFXShortcut.htm&#41;)
 
 [//]: # ()
-[//]: # (如果用Pyinstaller打包成一个可执行文件，那么运行这个文件会有一个解压资源的过程，导致程序启动非常慢;但如果不打包成一个文件似乎又显得十分丑陋；)
-
-[//]: # ()
-[//]: # (好在可用使用压缩软件（Win RAR）创建自解压文件，外表上看，自解压文件仍然是一个可执行文件，他甚至可用引导用户选择自己的安装目录等奇妙的功能；)
 
 [//]: # ()
 [//]: # (通过自解压，让这个demo显得更“正式”一点，更类似于一个成熟的带安装器的软件。)
