--- a/docs/调试与开发.md
+++ b/docs/调试与开发.md
@@ -1,12 +1,10 @@
 # 调试与开发
 
-- >ps：项目代码水平比较糟糕，整体更像一个缝合怪，可能并没有太大的参考价值，
 
-- ### [视频参考](https://www.bilibili.com/video/BV1Ce4y1Z7Nq)
 ### 速达目录
 
 [本地调试与运行](#本地调试与运行)
-[安装包](#安装包)
+[安装包制作](#安装包制作)
 
 ## 本地调试与运行
 
@@ -93,154 +91,16 @@ DefaultDirName=	{userappdata}\{#MyAppName}
 DisableDirPage=yes
 ```
 
-[//]: # (## 自解压)
-
-[//]: # ()
-[//]: # (&#40;已弃用压缩软件自解压（原因是各种报毒），建议使用Inno Setup 制作安装包&#41;)
-
-
-[//]: # (参考资料：[自解压命令: shortcut WinRAR]&#40;https://documentation.help/WinRAR-zh/HELPSFXShortcut.htm&#41;)
-
-[//]: # ()
-
-[//]: # ()
-[//]: # (通过自解压，让这个demo显得更“正式”一点，更类似于一个成熟的带安装器的软件。)
-
-[//]: # ()
-[//]: # (### 1. -D 参数打包)
-
-[//]: # ()
-[//]: # (   ```)
-
-[//]: # (   pyinstaller -D -w -i favicon.ico main.py --add-data "favicon.ico;.\\"  --add-data ".\\db\\*;.\\db")
-
-[//]: # (   ```)
-
-[//]: # ()
-[//]: # (### 2. 通过RAR 压缩成一个压缩包)
-
-[//]: # ()
-[//]: # (#### 1. 在此之前，先改变文件夹名字；)
-
-[//]: # ()
-[//]: # (   pyinstaller 默认生成的文件夹为dist\main)
-
-[//]: # (   我将main文件夹名字改为 YanX，在后面自解压后YanX\就是软件的目录)
-
-[//]: # (   )
-[//]: # (   ![]&#40;img/2022-09-06_21-14-25-自解压-改名.png&#41;)
-
-[//]: # (   )
-[//]: # (#### 2. 压缩文件)
-
-[//]: # (   )
-[//]: # (   ![]&#40;img/2022-09-06_21-16-15-自解压-压缩.png&#41;)
-
-[//]: # (   ![]&#40;img/2022-09-06_21-17-54-自解压-压缩完成.png&#41;)
-
-[//]: # (   )
-[//]: # (#### 3. 创建自解压文件)
-
-[//]: # (   )
-[//]: # (   首先再用RAR打开压缩包，选择自解压格式)
-
-[//]: # (   ![]&#40;img/2022-09-06_21-21-46-自解压-打开.png&#41;)
-
-[//]: # (      )
-[//]: # (   选择第一个 Default.SFX)
-
-[//]: # (   ![]&#40;img/2022-09-06_21-25-31-自解压-默认模板.png&#41;)
-
-[//]: # ()
-[//]: # (#### 4. 自解压高级先选)
-
-[//]: # (      )
-[//]: # (1. 常规)
-
-[//]: # ()
-[//]: # (   解压路径输入：`%APPDATA% `,选择绝对路径。这是一个环境变量，代表路径 `C:\Users\用户名\AppData\Roaming\`这个路径，)
-
-[//]: # ()
-[//]: # (   也可以选其他的，需要注意的是有些路径涉及权限问题，其他路径参考：[环境变量]&#40;https://baike.baidu.com/item/%E7%8E%AF%E5%A2%83%E5%8F%98%E9%87%8F&#41;)
-
-[//]: # ()
-[//]: # (   ![]&#40;img/2022-09-06_21-28-50-自解压-常规.png&#41;)
-
-[//]: # ()
-[//]: # (2. 模式)
-
-[//]: # ()
-[//]: # (   1. 全部显示：运行自解压文件，会显示对话框，用户可用选择解压路径（建议）)
-
-[//]: # (   2. 隐藏启动对话框：运行自解压文件，解压到指定目录，但用户不能操作)
-
-[//]: # (   3. 全部隐藏：运行自解压文件后台解压，用户无感知)
-
-[//]: # ()
-[//]: # (   ![]&#40;img/2022-09-06_21-42-19-自解压-模式.png&#41;)
-
-[//]: # ()
-[//]: # (3. 高级)
-
-[//]: # ()
-[//]: # (   点击添加快捷方式，添加一个快捷方式到桌面)
-
-[//]: # ()
-[//]: # (   ![]&#40;img/2022-09-06_21-46-28-自解压-快捷方式.png&#41;)
-
-[//]: # (   )
-[//]: # (   自解压文件解压后的文件夹，是`YanX\`,源文件名则是`YanX\main.exe`,快捷方式图标位于复制的静态文件文件夹`YanX\img\`下)
-
-[//]: # (   )
-[//]: # (   这两个路径你也可以填绝对路径，但是用户选择解压路径后，就绝对路径没那么好用了)
-
-[//]: # ()
-[//]: # (   ![]&#40;img/2022-09-06_21-49-24-自解压-快捷方式-路径.png&#41;)
-
-[//]: # ()
-[//]: # (4. 更新)
-
-[//]: # ()
-[//]: # (   用户大致不会想知道你，解压的细节，所以就不用询问，做覆盖替换就好了)
-
-[//]: # ()
-[//]: # (   ![]&#40;img/2022-09-06_21-55-16-自解压-更新.png&#41;)
-
-[//]: # ()
-[//]: # (5. 确定)
-
-[//]: # ()
-[//]: # (   最后选择确定就好了)
-
-[//]: # ()
-[//]: # (   ![]&#40;img/2022-09-06_21-49-24-自解压-确定.png&#41;)
-
-[//]: # (   )
-[//]: # (   然后就能看到，与压缩文件同目录的自解压格式文件了)
-
-[//]: # (   )
-[//]: # (   ![]&#40;img/2022-09-06_21-59-47-自解压-完成.png&#41;)
-
-[//]: # ()
-[//]: # (   )
-[//]: # ()
-[//]: # ()
-[//]: # (      )
-[//]: # (   )
-[//]: # (      )
-[//]: # (   )
-[//]: # ()
-
 ## 附加
 
 ### 安装virtualenv
 
-    ```
-    pip install virtualenv
-    ```
+ ```
+ pip install virtualenv
+ ```
 
 ### 安装 pyinstaller
 
-    ```
-    pip install pyinstaller
-    ```
+ ```
+ pip install pyinstaller
+ ```
