--- a/docs/调试与开发.md
+++ b/docs/调试与开发.md
@@ -85,7 +85,7 @@ Inno Setup 教程：https://www.bilibili.com/video/BV15k4y1R7cL
 （自动将资源复制到目录中了）
 
 ```shell
-pyinstaller -D -w -i favicon.ico main.py --add-data "favicon.ico;.\\"  --add-data ".\\db\\*;.\\db
+pyinstaller -D -w -i favicon.ico main.py --add-data "favicon.ico;.\\"  --add-data ".\\db\\*;.\\db"
 ```
 
 查找替换以下字段，安装到AppData目录
@@ -108,3 +108,5 @@ pip install virtualenv
 ```
 pip install pyinstaller
 ```
+
+
