--- a/docs/调试与开发.md
+++ b/docs/调试与开发.md
@@ -108,4 +108,6 @@ pip install virtualenv
 pip install pyinstaller
 ```
 
+## YanX-Star History
 
+[![Star History Chart](https://api.star-history.com/svg?repos=xx025/YanX&type=Timeline)](https://star-history.com/#xx025/YanX&Timeline)
